--- a/app/src/main/res/layout/expense_list.xml
+++ b/app/src/main/res/layout/expense_list.xml
@@ -41,27 +41,72 @@
                 android:layout_height="match_parent"
                 android:padding="5dp">
 
+                <ImageView
+                    android:id="@+id/ivExpenseType"
+                    android:layout_width="52dp"
+                    android:layout_height="52dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:background="@drawable/circle_background"
+                    android:padding="8dp"
+                    android:src="@drawable/expenses"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:tint="#8846FF"/>
+
                 <TextView
                     android:id="@+id/tvExpenseType"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     android:text="@{expenseModel.expenseType}"
                     android:textStyle="bold"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/tvAmount"
+                    app:layout_constraintStart_toEndOf="@+id/ivExpenseType"
                     app:layout_constraintTop_toTopOf="parent" />
 
 
                 <TextView
-                    android:id="@+id/tvAmount"
+                    android:id="@+id/tvDescription"
                     android:layout_width="0dp"
+                    android:layout_height="30dp"
+                    android:layout_marginStart="8dp"
+                    android:maxLines="2"
+                    android:text="@{String.valueOf(expenseModel.description)}"
+                    app:layout_constraintEnd_toStartOf="@+id/tvAmount"
+                    app:layout_constraintStart_toEndOf="@+id/ivExpenseType"
+                    app:layout_constraintTop_toBottomOf="@+id/tvExpenseType" />
+
+                <TextView
+                    android:id="@+id/tvAmount"
+                    android:layout_width="70dp"
                     android:layout_height="wrap_content"
                     android:text="@{String.valueOf(expenseModel.amount)}"
                     android:textStyle="bold"
+                    app:layout_constraintBottom_toTopOf="@+id/tvDate"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tvExpenseType" />
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/tvDate"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:text="@{String.valueOf(expenseModel.date)}"
+                    app:layout_constraintEnd_toStartOf="@+id/tvStatus"
+                    app:layout_constraintStart_toEndOf="@+id/ivExpenseType"
+                    app:layout_constraintTop_toBottomOf="@+id/tvDescription" />
+
+                <TextView
+                    android:id="@+id/tvStatus"
+                    android:layout_width="70dp"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tvDescription" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
