--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -16,6 +16,9 @@
         <action
             android:id="@+id/action_fragmentLogin_to_registerFragment"
             app:destination="@id/registerFragment" />
+        <action
+            android:id="@+id/action_fragmentLogin_to_waitingExpensesFragment"
+            app:destination="@id/waitingExpensesFragment" />
     </fragment>
 
     <fragment
@@ -36,4 +39,9 @@
         android:name="com.kiliccambaz.expenseapp.ui.employee.addexpense.AddExpenseFragment"
         android:label="fragment_add_expense"
         tools:layout="@layout/fragment_add_expense" />
+    <fragment
+        android:id="@+id/waitingExpensesFragment"
+        android:name="com.kiliccambaz.expenseapp.ui.manager.WaitingExpensesFragment"
+        android:label="fragment_waiting_expenses"
+        tools:layout="@layout/fragment_waiting_expenses" />
 </navigation>
