--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="fab_margin">24dp</dimen>
+    <dimen name="spacing_between_entries">16dp</dimen>
+    <dimen name="margin_16dp">16dp</dimen>
 </resources>
