--- a/app/src/main/res/layout/fragment_approved_expense_list.xml
+++ b/app/src/main/res/layout/fragment_approved_expense_list.xml
@@ -7,11 +7,11 @@
     tools:context=".ui.manager.WaitingExpensesFragment">
 
     <include
-        android:id="@+id/toolbar"
+        android:id="@+id/include"
         layout="@layout/filter_toolbar" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvWaitingExpenseList"
+        android:id="@+id/rv_approved_expense_list"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:padding="8dp"
@@ -19,6 +19,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/include" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
