--- a/app/src/main/res/layout/fragment_expense_list.xml
+++ b/app/src/main/res/layout/fragment_expense_list.xml
@@ -6,10 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".ui.employee.expenses.ExpenseListFragment">
 
+    <include layout="@layout/filter_toolbar" />
+
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvExpenseList"
+        android:id="@+id/rv_expense_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="68dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -20,7 +23,7 @@
         android:layout_margin="@dimen/fab_margin"
         android:src="@drawable/baseline_add_24"
         app:backgroundTint="@color/material_dynamic_tertiary60"
-        app:layout_anchor="@id/rvExpenseList"
+        app:layout_anchor="@id/rv_expense_list"
         app:layout_anchorGravity="bottom|right|end" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
