--- a/app/src/main/res/layout/expense_list.xml
+++ b/app/src/main/res/layout/expense_list.xml
@@ -85,7 +85,7 @@
                     android:id="@+id/tvAmount"
                     android:layout_width="70dp"
                     android:layout_height="wrap_content"
-                    android:text="@{String.valueOf(expenseModel.amount)}"
+                    app:formattedCurrency="@{expenseModel}"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toTopOf="@+id/tvDate"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -103,7 +103,7 @@
 
                 <TextView
                     android:id="@+id/tvStatus"
-                    android:layout_width="70dp"
+                    android:layout_width="130dp"
                     android:layout_height="wrap_content"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tvDescription" />
