--- a/app/src/main/res/layout/history_list.xml
+++ b/app/src/main/res/layout/history_list.xml
@@ -81,11 +81,13 @@
                     android:id="@+id/tvAmount"
                     android:layout_width="70dp"
                     android:layout_height="wrap_content"
-                    android:text="@{String.valueOf(expenseModel.amount)}"
+                    android:layout_marginEnd="8dp"
+                    android:textAlignment="textEnd"
                     android:textStyle="bold"
+                    app:formattedCurrency="@{expenseModel}"
                     app:layout_constraintBottom_toTopOf="@+id/tvDate"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toBottomOf="@+id/cardView2" />
 
                 <TextView
                     android:id="@+id/tvDate"
@@ -99,10 +101,37 @@
 
                 <TextView
                     android:id="@+id/tvStatus"
-                    android:layout_width="70dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:textAlignment="textEnd"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tvDescription" />
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cardView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:backgroundTint="#EADDFF"
+                    app:cardCornerRadius="16dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <TextView
+                        android:id="@+id/tvUser"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="5dp"
+                        android:text="@{expenseModel.user}"
+                        android:textColor="#673AB7"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+
+                </androidx.cardview.widget.CardView>
+
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
