--- a/app/src/main/res/layout/waiting_expense_list.xml
+++ b/app/src/main/res/layout/waiting_expense_list.xml
@@ -13,7 +13,7 @@
 
         <variable
             name="expenseModel"
-            type="com.kiliccambaz.expenseapp.data.ExpenseModel" />
+            type="com.kiliccambaz.expenseapp.data.ExpenseHistoryUIModel" />
 
         <variable
             name="clickListener"
@@ -24,7 +24,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <!--CRD ITEM INFO-->
         <androidx.cardview.widget.CardView
             android:id="@+id/crdItemInfo"
             android:layout_width="match_parent"
@@ -56,23 +55,43 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:tint="#8846FF" />
 
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cardView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginTop="8dp"
+                    android:backgroundTint="#EADDFF"
+                    app:cardCornerRadius="16dp"
+                    app:layout_constraintStart_toEndOf="@+id/iv_expense_type"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="5dp"
+                        android:text="@{expenseModel.user}"
+                        android:textColor="#673AB7"></TextView>
+
+                </androidx.cardview.widget.CardView>
+
                 <TextView
                     android:id="@+id/tv_expense_type"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="2dp"
                     android:text="@{expenseModel.expenseType}"
                     android:textStyle="bold"
                     app:layout_constraintStart_toEndOf="@+id/iv_expense_type"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toBottomOf="@+id/cardView3" />
 
                 <TextView
                     android:id="@+id/tv_amount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="2dp"
                     android:textStyle="bold"
                     app:formattedCurrency="@{expenseModel}"
                     app:layout_constraintStart_toEndOf="@+id/iv_expense_type"
@@ -83,7 +102,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="2dp"
                     android:text="@{String.valueOf(expenseModel.date)}"
                     app:layout_constraintStart_toEndOf="@+id/iv_expense_type"
                     app:layout_constraintTop_toBottomOf="@+id/tv_amount" />
@@ -114,16 +133,6 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/btn_approve" />
-
-                <TextView
-                    android:id="@+id/tv_user"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
-                    android:text="@{expenseModel.userId}"
-                    app:layout_constraintStart_toEndOf="@+id/iv_expense_type"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_date" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
