--- a/app/src/main/res/layout/waiting_expense_list.xml
+++ b/app/src/main/res/layout/waiting_expense_list.xml
@@ -134,6 +134,16 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/btn_approve" />
 
+                <TextView
+                    android:id="@+id/tv_description"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:text="@{expenseModel.description}"
+                    android:maxLines="2"
+                    app:layout_constraintStart_toStartOf="@+id/tv_date"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_date" />
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
 
