çoklu masraf eklendi ve yönetici sayfası düzenlendi

--- a/app/src/main/res/layout/approved_expense_list.xml
+++ b/app/src/main/res/layout/approved_expense_list.xml
@@ -13,7 +13,7 @@
 
         <variable
             name="expenseModel"
-            type="com.kiliccambaz.expenseapp.data.ExpenseHistoryUIModel" />
+            type="com.kiliccambaz.expenseapp.data.ExpenseUIModel" />
 
         <variable
             name="clickListener"
