--- a/app/src/main/res/layout/layout_expense_entry.xml
+++ b/app/src/main/res/layout/layout_expense_entry.xml
@@ -48,19 +48,19 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/txtDescriptionInputLayout"
+        android:id="@+id/txtDateInputLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:hint="@string/description"
+        android:hint="@string/date"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtAmountInputLayout">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/txtDescription"
+            android:id="@+id/txtDate"
             android:layout_width="match_parent"
             android:layout_height="100dp" />
     </com.google.android.material.textfield.TextInputLayout>
