--- a/app/src/main/res/layout/expense_list.xml
+++ b/app/src/main/res/layout/expense_list.xml
@@ -13,7 +13,7 @@
 
         <variable
             name="expenseModel"
-            type="com.kiliccambaz.expenseapp.data.ExpenseModel" />
+            type="com.kiliccambaz.expenseapp.data.ExpenseMainModel" />
 
         <variable
             name="clickListener"
@@ -58,39 +58,15 @@
                     app:tint="#8846FF"/>
 
                 <TextView
-                    android:id="@+id/tvExpenseType"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    android:text="@{expenseModel.expenseType}"
-                    android:textStyle="bold"
-                    app:layout_constraintEnd_toStartOf="@+id/tvAmount"
-                    app:layout_constraintStart_toEndOf="@+id/ivExpenseType"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-
-                <TextView
                     android:id="@+id/tvDescription"
                     android:layout_width="0dp"
                     android:layout_height="30dp"
                     android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
                     android:maxLines="2"
                     android:text="@{String.valueOf(expenseModel.description)}"
-                    app:layout_constraintEnd_toStartOf="@+id/tvAmount"
-                    app:layout_constraintStart_toEndOf="@+id/ivExpenseType"
-                    app:layout_constraintTop_toBottomOf="@+id/tvExpenseType" />
-
-                <TextView
-                    android:id="@+id/tvAmount"
-                    android:layout_width="70dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="8dp"
-                    android:textAlignment="textEnd"
-                    android:textStyle="bold"
-                    app:formattedCurrency="@{expenseModel}"
-                    app:layout_constraintBottom_toTopOf="@+id/tvDate"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/ivExpenseType"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
