--- a/app/src/main/res/layout/waiting_expense_list.xml
+++ b/app/src/main/res/layout/waiting_expense_list.xml
@@ -13,7 +13,7 @@
 
         <variable
             name="expenseModel"
-            type="com.kiliccambaz.expenseapp.data.ExpenseHistoryUIModel" />
+            type="com.kiliccambaz.expenseapp.data.ExpenseUIModel" />
 
         <variable
             name="clickListener"
@@ -29,6 +29,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?android:attr/selectableItemBackground"
+            android:onClick="@{() -> clickListener.onShowDetailClick(expenseModel)}"
             app:cardCornerRadius="12dp"
             app:cardElevation="3dp"
             app:cardMaxElevation="3dp"
@@ -60,7 +61,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="12dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="16dp"
                     android:backgroundTint="#EADDFF"
                     app:cardCornerRadius="16dp"
                     app:layout_constraintStart_toEndOf="@+id/iv_expense_type"
@@ -76,28 +77,6 @@
                 </androidx.cardview.widget.CardView>
 
                 <TextView
-                    android:id="@+id/tv_expense_type"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="2dp"
-                    android:text="@{expenseModel.expenseType}"
-                    android:textStyle="bold"
-                    app:layout_constraintStart_toEndOf="@+id/iv_expense_type"
-                    app:layout_constraintTop_toBottomOf="@+id/cardView3" />
-
-                <TextView
-                    android:id="@+id/tv_amount"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="2dp"
-                    android:textStyle="bold"
-                    app:formattedCurrency="@{expenseModel}"
-                    app:layout_constraintStart_toEndOf="@+id/iv_expense_type"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_expense_type" />
-
-                <TextView
                     android:id="@+id/tv_date"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -105,7 +84,7 @@
                     android:layout_marginTop="2dp"
                     android:text="@{String.valueOf(expenseModel.date)}"
                     app:layout_constraintStart_toEndOf="@+id/iv_expense_type"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_amount" />
+                    app:layout_constraintTop_toBottomOf="@+id/cardView3" />
 
                 <Button
                     android:id="@+id/btn_approve"
@@ -136,11 +115,13 @@
 
                 <TextView
                     android:id="@+id/tv_description"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="2dp"
-                    android:text="@{expenseModel.description}"
+                    android:layout_marginEnd="8dp"
                     android:maxLines="2"
+                    android:text="@{expenseModel.description}"
+                    app:layout_constraintEnd_toStartOf="@+id/btn_reject"
                     app:layout_constraintStart_toStartOf="@+id/tv_date"
                     app:layout_constraintTop_toBottomOf="@+id/tv_date" />
 
