--- a/app/src/main/res/layout/history_list.xml
+++ b/app/src/main/res/layout/history_list.xml
@@ -74,7 +74,7 @@
                 <TextView
                     android:id="@+id/tvDescription"
                     android:layout_width="0dp"
-                    android:layout_height="30dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:maxLines="2"
                     android:text="@{String.valueOf(expenseModel.description)}"
